Causeview Package Complete/ant script/retrieveUnpackaged/objects/Volunteer_Application__c.object
<CustomObject>
    <fields>
        <fullName>Status__c</fullName>
        <description>The current status of the application (Submitted / In Screening, Screening Complete, Approved, Placed, Declined, Exited).</description>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Submitted / In-Screening</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Screening Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Placed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Declined</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exited</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <description>Applicant job title</description>
        <label>Title</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Training_Provided__c</fullName>
        <description>Training provided specific to volunteer role.</description>
        <formula>IF ( INCLUDES ( Volunteer_Role__r.Training_Provided__c , &quot;Event Orientation&quot; ), &quot;Event Orientation; &quot;,null ) &amp; 
IF ( INCLUDES ( Volunteer_Role__r.Training_Provided__c , &quot;Welcome/Orientation&quot; ), &quot;Welcome/Orientation; &quot;,null ) &amp; 
IF ( INCLUDES ( Volunteer_Role__r.Training_Provided__c , &quot;Program Specific Training&quot; ), &quot;Program Specific Training; &quot;,null ) &amp;
IF ( INCLUDES ( Volunteer_Role__r.Training_Provided__c , &quot;Observation/Shadowing&quot; ), &quot;Observation/Shadowing; &quot;,null )</formula>
        <label>Training Provided</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>The application type (New Applicant, New Screening Level, New Program, New Screening Level / New Program).</description>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>New Applicant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Screening Level</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Screening Level / New Program</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Volunteer_Availability__c</fullName>
        <description>Times during the week when the individual is available to volunteer.</description>
        <label>Volunteer Availability</label>
        <picklist>
            <picklistValues>
                <fullName>Monday Morning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monday Afternoon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monday Evening</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tuesday Morning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tuesday Afternoon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tuesday Evening</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wednesday Morning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wednesday Afternoon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wednesday Evening</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thursday Morning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thursday Afternoon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thursday Evening</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Friday Morning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Friday Afternoon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Friday Evening</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Saturday Morning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Saturday Afternoon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Saturday Evening</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sunday Morning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sunday Afternoon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sunday Evening</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Volunteer_Opportunity_Name__c</fullName>
        <formula>Volunteer_Role__r.Volunteer_Opportunity__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Volunteer Opportunity Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Volunteer_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used to populate MyGroups</description>
        <inlineHelpText>Used to populate MyGroups</inlineHelpText>
        <label>(Dep) Volunteer Opportunity</label>
        <referenceTo>Volunteer_Opportunity__c</referenceTo>
        <relationshipLabel>Volunteer Applications</relationshipLabel>
        <relationshipName>Volunteer_Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Volunteer_Role__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The ID of the Volunteer Role the application is related to.</description>
        <inlineHelpText>The Volunteer Role that the Application is matched with</inlineHelpText>
        <label>Volunteer Role</label>
        <referenceTo>Volunteer_Role__c</referenceTo>
        <relationshipLabel>Volunteer Applications</relationshipLabel>
        <relationshipName>Volunteer_Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Volunteer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The ID of the Individual making the application.</description>
        <label>Volunteer</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Volunteer Applications</relationshipLabel>
        <relationshipName>Volunteer_Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Will_you_submit_criminal_records_check__c</fullName>
        <description>Applicant&apos;s willingness to submit a criminal record check.</description>
        <label>Will Submit to a Criminal Records Check</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Volunteer Application</label>
    <listViews>
        <fullName>All</fullName>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>Volunteer__c</columns>
        <columns>Volunteer_Role__c</columns>
        <columns>Type__c</columns>
        <columns>Status_Background__c</columns>
        <columns>Program_Specific_Training_Status__c</columns>
        <columns>Status_Reference__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>VA-{000000}</displayFormat>
        <label>Volunteer Application Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Volunteer Applications</pluralLabel>
    <recordTypes>
        <fullName>Individual_Application</fullName>
        <active>true</active>
        <label>Individual Application</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sign_Up</fullName>
        <active>true</active>
        <description>A placeholder application for sign-up positons</description>
        <label>Sign Up</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>OnlyAcceptBackgroundCheckedApps</fullName>
        <active>true</active>
        <description>Prevents applications from being approved unless their background check has been cleared out.</description>
        <errorConditionFormula>AND( RecordTypeId = &apos;012J00000008XDY&apos; , OR( ISPICKVAL( Status__c , &quot;Approved&quot;), ISPICKVAL( Status__c , &quot;Accepted&quot;)), NOT( AND( OR( ISPICKVAL( Status_Background__c , &quot;Completed&quot; ), ISPICKVAL( Status_Background__c , &quot;Not Required&quot; )), OR( ISPICKVAL( Status_Reference__c , &quot;Completed&quot; ), ISPICKVAL( Status_Reference__c , &quot;Not Required&quot; )))))</errorConditionFormula>
        <errorMessage>The Screening requirements for this application have not yet been met.</errorMessage>
    </validationRules>
</CustomObject>